--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
 
     <!--User Header CardView-->
     <RelativeLayout
-        android:id="@+id/rl_userHeaderContainer"
+        android:id="@+id/rl_UserHeaderContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -23,7 +23,6 @@
             android:id="@+id/cv_UserHeaderCard"
             android:layout_width="match_parent"
             android:layout_height="@dimen/userHeaderHeight"
-            android:onClick="toggleNavbar"
             app:cardCornerRadius="@dimen/cardViewCornerRadius"
             app:cardElevation="0dp">
 
@@ -85,6 +84,7 @@
         <!--Shadow CardView-->
 
         <android.support.v7.widget.CardView
+            android:id="@+id/cv_UserHeaderCardShadow"
             android:layout_width="match_parent"
             android:layout_height="@dimen/userHeaderHeight"
             android:layout_marginTop="5dp"
@@ -95,37 +95,37 @@
     </RelativeLayout>
 
     <View
-        android:id="@+id/v_userHeaderScrollHide"
+        android:id="@+id/v_UserHeaderScrollHideMask"
         android:layout_width="match_parent"
         android:layout_height="@dimen/userHeaderHeight"
         android:layout_alignParentTop="true"
         android:background="@color/colorWhite" />
 
     <FrameLayout
-        android:id="@+id/fl_fragmentContainer"
+        android:id="@+id/fl_MainActivityFragmentContainer"
         android:elevation="-2dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/v_userHeaderScrollHide"/>
+        android:layout_height="match_parent"
+        android:layout_below="@id/v_UserHeaderScrollHideMask"/>
 
     <View
-        android:id="@+id/v_translucentHide"
+        android:id="@+id/v_TranslucentEffectMask"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/v_userHeaderScrollHide"
+        android:layout_below="@id/v_UserHeaderScrollHideMask"
         android:elevation="-1dp"
-        android:background="@color/colorTranslucentBackground"
-        android:onClick="toggleNavbar"/>
+        android:background="@color/colorTranslucentBackground" />
 
     <RelativeLayout
-        android:id="@+id/rl_userInfoNavbarContainer"
+        android:id="@+id/rl_NavbarContainer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/rl_userHeaderContainer"
+        android:layout_below="@id/rl_UserHeaderContainer"
         android:layout_marginStart="@dimen/cardViewDoubleMargin"
         android:layout_marginTop="@dimen/cardViewDefaultMargin">
 
         <android.support.v7.widget.CardView
+            android:id="@+id/cv_Navbar"
             android:layout_width="@dimen/userInfoNavbarWidth"
             android:layout_height="@dimen/userInfoNavbarHeight"
             app:cardCornerRadius="@dimen/cardViewCornerRadius"
@@ -133,18 +133,21 @@
             app:cardBackgroundColor="@color/colorCyan">
 
             <LinearLayout
+                android:id="@+id/ll_NavbarInnerContainer"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
                 android:padding="@dimen/cardViewDefaultPadding">
 
                 <LinearLayout
+                    android:id="@+id/ll_NavbarHomeContainer"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:orientation="horizontal">
 
                     <ImageView
+                        android:id="@+id/iv_NavbarHomeIcon"
                         android:layout_width="48dp"
                         android:layout_height="48dp"
                         android:layout_marginEnd="@dimen/cardViewDefaultPadding"
@@ -152,6 +155,7 @@
                         android:scaleType="fitCenter"/>
 
                     <TextView
+                        android:id="@+id/tv_NavbarHomeText"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
@@ -163,12 +167,13 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/ll_NavbarConnectContainer"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal"
-                    android:onClick="showConnectFragment">
+                    android:orientation="horizontal">
 
                     <ImageView
+                        android:id="@+id/iv_NavbarConnectIcon"
                         android:layout_width="48dp"
                         android:layout_height="48dp"
                         android:layout_marginEnd="@dimen/cardViewDefaultPadding"
@@ -176,6 +181,7 @@
                         android:scaleType="fitCenter"/>
 
                     <TextView
+                        android:id="@+id/tv_NavbarConnectText"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
@@ -187,13 +193,14 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/ll_NavbarPastActivitiesContainer"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:orientation="horizontal"
-                    android:onClick="showPastActivitiesFragment">
+                    android:orientation="horizontal">
 
                     <ImageView
+                        android:id="@+id/iv_NavbarPastActivitiesIcon"
                         android:layout_width="48dp"
                         android:layout_height="48dp"
                         android:layout_marginEnd="@dimen/cardViewDefaultPadding"
@@ -201,6 +208,7 @@
                         android:scaleType="fitCenter"/>
 
                     <TextView
+                        android:id="@+id/tv_NavbarPastActivitiesText"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
@@ -212,13 +220,14 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/ll_NavbarSettingsContainer"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:orientation="horizontal"
-                    android:onClick="showSettingsFragment">
+                    android:orientation="horizontal">
 
                     <ImageView
+                        android:id="@+id/iv_NavbarSettingsIcon"
                         android:layout_width="48dp"
                         android:layout_height="48dp"
                         android:layout_marginEnd="@dimen/cardViewDefaultPadding"
@@ -226,6 +235,7 @@
                         android:scaleType="fitCenter"/>
 
                     <TextView
+                        android:id="@+id/tv_NavbarSettingsText"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
@@ -241,6 +251,7 @@
         </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.CardView
+            android:id="@+id/cv_NavbarShadow"
             android:layout_width="@dimen/userInfoNavbarWidth"
             android:layout_height="@dimen/userInfoNavbarHeight"
             android:layout_marginTop="5dp"
@@ -252,6 +263,7 @@
 
     <!--Floating Action Button-->
     <ImageButton
+        android:id="@+id/ib_FloatingActionButton"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_alignParentEnd="true"
@@ -262,5 +274,6 @@
         android:background="@null"
         android:onClick="startSuggestionsActivity"
         android:scaleType="fitCenter"
-        android:src="@mipmap/fab" />
+        android:src="@mipmap/fab"
+        android:elevation="-2dp"/>
 </RelativeLayout>
