--- a/app/src/main/res/layout/fragment_questionaire_activeness.xml
+++ b/app/src/main/res/layout/fragment_questionaire_activeness.xml
@@ -20,19 +20,20 @@
             android:orientation="vertical">
 
             <ImageView
+                android:tint="@color/colorGreenish"
                 android:id="@+id/iv_AgeGroupIcon"
                 android:layout_width="250dp"
                 android:layout_height="250dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="20dp"
-                android:src="@drawable/ic_park" />
+                android:src="@drawable/work_out" />
 
             <TextView
                 android:id="@+id/iv_AgeGroupQuestion"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
-                android:text="What is your age group?"
+                android:text="How frequently do you work out?"
                 android:textAlignment="center"
                 android:textColor="@color/colorWhite"
                 android:textSize="35sp"
@@ -63,9 +64,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="20dp"
-                        android:buttonTint="@color/colorGreenishBlue"
+                        android:buttonTint="@color/colorGreenish"
                         android:padding="5dp"
-                        android:text="12 - 17"
+                        android:text="Daily"
                         android:textColor="@color/colorWhite"
                         android:textSize="20sp"
                         android:textStyle="bold" />
@@ -75,9 +76,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="20dp"
-                        android:buttonTint="@color/colorGreenishBlue"
+                        android:buttonTint="@color/colorGreenish"
                         android:padding="5dp"
-                        android:text="18 - 24"
+                        android:text="Weekly"
                         android:textColor="@color/colorWhite"
                         android:textSize="20sp"
                         android:textStyle="bold" />
@@ -87,9 +88,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="20dp"
-                        android:buttonTint="@color/colorGreenishBlue"
+                        android:buttonTint="@color/colorGreenish"
                         android:padding="5dp"
-                        android:text="24 - 44"
+                        android:text="Fortnightly"
                         android:textColor="@color/colorWhite"
                         android:textSize="20sp"
                         android:textStyle="bold" />
@@ -99,9 +100,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="20dp"
-                        android:buttonTint="@color/colorGreenishBlue"
+                        android:buttonTint="@color/colorGreenish"
                         android:padding="5dp"
-                        android:text="44 - 64"
+                        android:text="Monthly"
                         android:textColor="@color/colorWhite"
                         android:textSize="20sp"
                         android:textStyle="bold" />
@@ -110,9 +111,9 @@
                         android:id="@+id/rb_AgeGroup5"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:buttonTint="@color/colorGreenishBlue"
+                        android:buttonTint="@color/colorGreenish"
                         android:padding="5dp"
-                        android:text="above 64"
+                        android:text="Never"
                         android:textColor="@color/colorWhite"
                         android:textSize="20sp"
                         android:textStyle="bold" />
