--- a/app/src/main/res/layout/fragment_questionaire_bmi.xml
+++ b/app/src/main/res/layout/fragment_questionaire_bmi.xml
@@ -21,8 +21,8 @@
                 android:layout_height="250dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="20dp"
-                android:src="@mipmap/body"
-                android:tint="@color/colorLinkBlue" />
+                android:src="@drawable/ic_bmi"
+                android:tint="@color/colorGreenishBlue" />
 
             <TextView
                 android:layout_width="match_parent"
