--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="colorLavendar">#9482AC</color>
     <color name="colorGreenish">#D2FFB7</color>
     <color name="progressBarPink">#FFBDB2</color>
+    <color name="colorVibrantRed">#CE7080</color>
     <color name="colorLinkBlue">#8091BE</color>
     <color name="colorBlack">#000000</color>
     <color name="colorTransparent">@android:color/transparent</color>
